2015-04-24  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/word_dictionary.py (WordDictionary.__init__): check for None,
	since index might be 0.

2015-04-23  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/embeddings.py (Gensim.read_vectors): do not create weights for
	special symbols here.

	* deepnl/word_dictionary.py (WordDictionary.__init__): padding for
	word2vect.

	* deepnl/extractors.pyx (AffixExtractor.__init__): accept wordlist as
	argument.

2015-04-24  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/extractors.pyx (Embeddings.__init__): add vectors for
	special symbols.

2015-04-23  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/word_dictionary.py (WordDictionary.__contains__):
	lowercase only for SENNA.
	(WordDictionary.__getitem__): check is not None since idx might be
	None.

	* bin/dl-pos.py (main): pass word list to SuffixExtractor.

2015-04-02  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkseq.pyx: softmax by column requires axis=0.

2015-03-29  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/trainer.pyx (_train_epoch): invoke Converter.update().

	* deepnl/extractors.pyx (Converter.update): added.

2015-03-26  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/extractors.pyx (create): added lowcase option.

2015-01-29  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/trainer.pyx (MovingAverage): added.

2015-01-27  Giuseppe Attardi  <attardi@di.unipi.it>

	* bin/dl-sentiwords.py: added.

2014-12-20  Giuseppe Attardi  <attardi@di.unipi.it>

	* nlpnet/networkSent.pyx: network for sentiment-specific word
	embeddings.

2014-04-22  Giuseppe Attardi  <attardi@di.unipi.it>

	* bin/nlpnet-train.py (saver): use random.seed() if you want to
	ensure replicability.

2014-04-19  Giuseppe Attardi  <attardi@di.unipi.it>

	* bin/nlpnet-train.py (create_network): moved initialization of
	transitions to Network.create_new().

2014-04-17  Giuseppe Attardi  <attardi@di.unipi.it>
